// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#censys.v2.client.hosts aggregate 1`] = `
Object {
  "buckets": Array [
    Object {
      "count": 47637476,
      "key": "80",
    },
    Object {
      "count": 35073802,
      "key": "443",
    },
    Object {
      "count": 17256198,
      "key": "7547",
    },
    Object {
      "count": 13216884,
      "key": "22",
    },
  ],
  "field": "services.port",
  "potential_deviation": 605118,
  "query": "service.service_name: HTTP",
  "total": 149575980,
  "total_omitted": 358388380,
}
`;

exports[`#censys.v2.client.hosts aggregate num buckets 1`] = `
Object {
  "buckets": Array [
    Object {
      "count": 47637476,
      "key": "80",
    },
    Object {
      "count": 35073802,
      "key": "443",
    },
    Object {
      "count": 17256198,
      "key": "7547",
    },
    Object {
      "count": 13216884,
      "key": "22",
    },
  ],
  "field": "services.port",
  "potential_deviation": 605118,
  "query": "service.service_name: HTTP",
  "total": 149575980,
  "total_omitted": 358388380,
}
`;

exports[`#censys.v2.client.hosts search 1`] = `
Array [
  Object {
    "ip": "1.0.0.0",
    "services": Array [
      Object {
        "port": 443,
        "service_name": "HTTP",
      },
      Object {
        "port": 80,
        "service_name": "HTTP",
      },
    ],
  },
  Object {
    "ip": "1.0.0.1",
    "services": Array [
      Object {
        "port": 443,
        "service_name": "HTTP",
      },
      Object {
        "port": 80,
        "service_name": "HTTP",
      },
    ],
  },
]
`;

exports[`#censys.v2.client.hosts search pages 1`] = `
Array [
  Object {
    "ip": "1.0.0.0",
    "services": Array [
      Object {
        "port": 443,
        "service_name": "HTTP",
      },
      Object {
        "port": 80,
        "service_name": "HTTP",
      },
    ],
  },
  Object {
    "ip": "1.0.0.1",
    "services": Array [
      Object {
        "port": 443,
        "service_name": "HTTP",
      },
      Object {
        "port": 80,
        "service_name": "HTTP",
      },
    ],
  },
  Object {
    "ip": "1.0.0.2",
    "services": Array [
      Object {
        "port": 443,
        "service_name": "HTTP",
      },
      Object {
        "port": 80,
        "service_name": "HTTP",
      },
    ],
  },
]
`;

exports[`#censys.v2.client.hosts view 1`] = `
Object {
  "ip": "8.8.8.8",
  "last_updated_at": "2021-04-01T14:10:10.712Z",
  "location": Object {
    "continent": "North America",
    "coordinates": Object {
      "latitude": 37.751,
      "longitude": -97.822,
    },
    "country": "United States",
    "country_code": "US",
    "postal_code": "",
    "registered_country": "United States",
    "registered_country_code": "US",
    "timezone": "America/Chicago",
  },
  "location_updated_at": "2021-03-30T14:53:12.980328Z",
  "services": Array [
    Object {
      "_decoded": "dns",
      "dns": Object {
        "server_type": "FORWARDING",
      },
      "extended_service_name": "DNS",
      "observed_at": "2021-04-01T13:40:03.755876935Z",
      "perspective_id": "PERSPECTIVE_NTT",
      "port": 53,
      "service_name": "DNS",
      "software": Array [],
      "source_ip": "167.248.133.40",
      "transport_protocol": "UDP",
      "truncated": false,
    },
  ],
}
`;

exports[`#censys.v2.client.hosts view at time 1`] = `
Object {
  "ip": "8.8.8.8",
  "last_updated_at": "2021-04-01T14:10:10.712Z",
  "location": Object {
    "continent": "North America",
    "coordinates": Object {
      "latitude": 37.751,
      "longitude": -97.822,
    },
    "country": "United States",
    "country_code": "US",
    "postal_code": "",
    "registered_country": "United States",
    "registered_country_code": "US",
    "timezone": "America/Chicago",
  },
  "location_updated_at": "2021-03-30T14:53:12.980328Z",
  "services": Array [
    Object {
      "_decoded": "dns",
      "dns": Object {
        "server_type": "FORWARDING",
      },
      "extended_service_name": "DNS",
      "observed_at": "2021-04-01T13:40:03.755876935Z",
      "perspective_id": "PERSPECTIVE_NTT",
      "port": 53,
      "service_name": "DNS",
      "software": Array [],
      "source_ip": "167.248.133.40",
      "transport_protocol": "UDP",
      "truncated": false,
    },
  ],
}
`;

exports[`#censys.v2.client.hosts view invalid document id 1`] = `
Object {
  "code": 422,
  "error": "Invalid ip address",
  "status": "Unprocessable Entity",
}
`;
